Test latest lychee version tag

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,11 @@ jobs:
         with:
           lycheeVersion: nightly
 
+      - name: test latest lychee version
+        uses: ./
+        with:
+          lycheeVersion: latest
+
       - name: test globs
         uses: ./
         with:
